fixed of appearing dialog at IE added autoHeight properties to dialog so dialog can be expanded on whole content and scroll bar will appear on overlay, so the option allows to make dialog being more flexible to content and in case of huge content (let say document preview) on mobile screen. in other word will responsive to screen.

--- a/components/dialog/theme.scss
+++ b/components/dialog/theme.scss
@@ -3,59 +3,73 @@
 @import "../mixins";
 @import "./config";
 
-.dialog {
-  display: flex;
-  max-width: 96vw;
-  max-height: 96vh;
-  flex-direction: column;
-  background-color: $dialog-color-white;
-  border-radius: $dialog-border-radius;
-  box-shadow: $zdepth-shadow-5;
-  opacity: 0;
-  transition-delay: $animation-delay;
-  transition-timing-function: $animation-curve-default;
-  transition-duration: $animation-duration;
-  transition-property: opacity, transform;
-  transform: translateY(-$dialog-translate-y);
-  &.active {
-    opacity: 1;
-    transform: translateY(0%);
+.holder {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  .dialog {
+    position: relative;
+    margin: 0 auto;
+    width: 96vw;
+    background-color: $dialog-color-white;
+    border-radius: $dialog-border-radius;
+    box-shadow: $zdepth-shadow-5;
+    opacity: 0;
+    transition-delay: $animation-delay;
+    transition-timing-function: $animation-curve-default;
+    transition-duration: $animation-duration;
+    transition-property: opacity, margin;
+    &.active {
+      opacity: 1;
+      margin: $dialog-translate-y auto;
+    }
   }
-}
 
-.small {
-  width: 30vw;
+  &.autoheight {
+    overflow-y: auto;
+    .body {
+      height: auto;
+      max-height: none !important;
+    }
+  }
 
-  @media screen and (max-width: $layout-breakpoint-sm-tablet) {
+  .small {
+    width: 30vw;
+
+    @media screen and (max-width: $layout-breakpoint-sm-tablet) {
+      width: 50vw;
+    }
+
+    @media screen and (max-width: $layout-breakpoint-xs) {
+      width: 75vw;
+    }
+  }
+
+  .normal {
     width: 50vw;
+
+    @media screen and (max-width: $layout-breakpoint-xs) {
+      width: 96vw;
+    }
   }
 
-  @media screen and (max-width: $layout-breakpoint-xs) {
-    width: 75vw;
-  }
-}
-
-.normal {
-  width: 50vw;
-
-  @media screen and (max-width: $layout-breakpoint-xs) {
+  .large {
     width: 96vw;
   }
-}
 
-.large {
-  width: 96vw;
-}
+  .fullscreen {
+    width: 96vw;
 
-.fullscreen {
-  width: 96vw;
-
-  @media screen and (max-width: $layout-breakpoint-xs) {
-    width: 100vw;
-    max-width: 100vw;
-    min-height: 100vh;
-    max-height: 100vh;
-    border-radius: 0;
+    @media screen and (max-width: $layout-breakpoint-xs) {
+      width: 100vw;
+      max-width: 100vw;
+      min-height: 100vh;
+      border-radius: 0;
+    }
   }
 }
 
